[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python3-cyberfusion-common"
version = "2.12.2"
description = "Common utilities."
readme = "README.md"
authors = [
    { name = "Cyberfusion", email = "support@cyberfusion.io" },
]
dependencies = [
    "psutil==7.2.1",
    "requests==2.32.5",
]

[project.urls]
"Source" = "https://github.com/CyberfusionIO/python3-cyberfusion-common"
